<resources>
    <string name="app_name" translatable="false">Quiz APP</string>
    <string name="name">Name</string>
    <string name="Quest01">What is the real name of Darth Vader?</string>
    <string name="Ans01A" translatable="false">Anakin Skywalker</string>
    <string name="Ans01B" translatable="false">Obi-Wan Kenobi</string>
    <string name="Ans01C" translatable="false">Anakin Skylord</string>
    <string name="Quest02">What is the name of the new Star Wars movie?</string>
    <string name="Ans02A">Return of the Jedi</string>
    <string name="Ans02B">Attack of the Clones</string>
    <string name="Ans02C" translatable="false">Rougue One</string>
    <string name="Quest03">What is the name of the Han Solo\'s ship?</string>
    <string name="Ans03A">Death Star</string>
    <string name="Ans03B" translatable="false">Millenium Falcon</string>
    <string name="Ans03C" translatable="false">X-Wing</string>
    <string name="Quest04">What is the name of Luke Skywalker\'s home planet?</string>
    <string name="Ans04A" translatable="false">Alderaan</string>
    <string name="Ans04B" translatable="false">Tatooine</string>
    <string name="Ans04C" translatable="false">Corellia</string>
    <string name="Quest05">Who\'s the little green man?</string>
    <string name="Ans05A" translatable="false">Yoda</string>
    <string name="Ans05B" translatable="false">Piccolo</string>
    <string name="Ans05C" translatable="false">ET</string>
    <string name="Questions">Questions</string>
    <string name="AnswerAll">Answer all questions!</string>
    <string name="Res">Result</string>
    <string name="Ans">answers</string>
    <string name="Got">You got</string>
    <string name="BtnSubmit">Submit</string>
    <string name="AnsTo">Questions 1 to 5</string>

</resources>
